# op1emu

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
ext/cqueue/: cqueue.cpp  cqueue.h
gui/: glfw_display.cpp  glfw_display.h  main.cpp  ui.json  ui_config.cpp  ui_config.h  usbip-internal.h  usbipd.cpp  usbipd.h
src/: common.h
src/cpu/: bcore_memory.cpp  bcore_memory.h  bootrom.cpp  bootrom.h  coretimer.cpp  coretimer.h  cpu.cpp  cpu.h  dma.cpp  dma.h  ebiu.cpp  ebiu.h  emu.cpp  emu.h  fastmem.cpp  fastmem.h  gpio.cpp  gpio.h  gptimer.cpp  gptimer.h  io.cpp  io.h  jtag.cpp  jtag.h  nand.cpp  nand.h  otp.cpp  otp.h  ppi.cpp  ppi.h  rtc.cpp  rtc.h  sic.cpp  sic.h  simhw.cpp  simhw.h  sport.cpp  sport.h  twi.cpp  twi.h  (+2 more)
src/loader/: ldr.cpp  ldr.h
src/peripheral/: MT29F4G08.cpp  MT29F4G08.h  adxl345.cpp  adxl345.h  display.h  keyboard.h  mcp230xx.cpp  mcp230xx.h  oled.cpp  oled.h  potentiometer.cpp  potentiometer.h
src/utils/: log.cpp  log.h  timer.cpp  timer.h
tools/: ldrdump.cpp
